# product_development

./: 01_Data_Exploration.ipynb  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 01_Data_Exploration.ipynb
product_development/: __init__.py  dataset.py  features.py  plots.py
product_development/modeling/: predict.py  train.py
